--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.hmao</groupId>
     <artifactId>hmao_migrate</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.2</version>
     <name>hmao_migrate</name>
     <description>Сервис миграции данных для ХМАО oracle в postgres</description>
 
